// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display/ListItemCollapsible Dense smoke-test 1`] = `
<li class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
    data-cy="list-item-collapsible-header"
    style="cursor: pointer;"
>
  <div class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root">
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="KeyboardArrowDownIcon"
         data-cy="list-item-collapsible-header-icon"
    >
      <path d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z">
      </path>
    </svg>
  </div>
  <div class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
       data-cy="list-item-collapsible-header-content"
  >
    Header
  </div>
</li>
<div class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
     data-cy="list-item-collapsible-collapse"
     style="min-height: 0px;"
>
  <div class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper">
    <div class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner">
      Collapsible Content
    </div>
  </div>
</div>
`;

exports[`Display/ListItemCollapsible Loading smoke-test 1`] = `
<li class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
    data-cy="list-item-collapsible-header"
    style="cursor: default;"
>
  <div class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root">
    <span class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
          style="width: 24px; height: 24px;"
    >
    </span>
  </div>
  <div class="MuiListItemText-root css-tlelie-MuiListItemText-root"
       data-cy="list-item-collapsible-header-content-loading"
  >
    <span class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root">
    </span>
  </div>
</li>
<div class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
     data-cy="list-item-collapsible-collapse"
     style="min-height: 0px;"
>
  <div class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper">
    <div class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner">
      Collapsible Content
    </div>
  </div>
</div>
`;

exports[`Display/ListItemCollapsible Open smoke-test 1`] = `
<li class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
    data-cy="list-item-collapsible-header"
    style="cursor: pointer;"
>
  <div class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root">
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="KeyboardArrowUpIcon"
         data-cy="list-item-collapsible-header-icon"
    >
      <path d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z">
      </path>
    </svg>
  </div>
  <div class="MuiListItemText-root css-tlelie-MuiListItemText-root"
       data-cy="list-item-collapsible-header-content"
  >
    Header
  </div>
</li>
<div class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
     data-cy="list-item-collapsible-collapse"
     style="min-height: 0px;"
>
  <div class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper">
    <div class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner">
      Collapsible Content
    </div>
  </div>
</div>
`;

exports[`Display/ListItemCollapsible Primary smoke-test 1`] = `
<li class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
    data-cy="list-item-collapsible-header"
    style="cursor: pointer;"
>
  <div class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root">
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="KeyboardArrowDownIcon"
         data-cy="list-item-collapsible-header-icon"
    >
      <path d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z">
      </path>
    </svg>
  </div>
  <div class="MuiListItemText-root css-tlelie-MuiListItemText-root"
       data-cy="list-item-collapsible-header-content"
  >
    Header
  </div>
</li>
<div class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
     data-cy="list-item-collapsible-collapse"
     style="min-height: 0px;"
>
  <div class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper">
    <div class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner">
      Collapsible Content
    </div>
  </div>
</div>
`;

exports[`Display/ListItemCollapsible Selected smoke-test 1`] = `
<li class="MuiListItem-root MuiListItem-gutters MuiListItem-padding Mui-selected css-1p823my-MuiListItem-root"
    data-cy="list-item-collapsible-header"
    style="cursor: pointer;"
>
  <div class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root">
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="KeyboardArrowDownIcon"
         data-cy="list-item-collapsible-header-icon"
    >
      <path d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z">
      </path>
    </svg>
  </div>
  <div class="MuiListItemText-root css-tlelie-MuiListItemText-root"
       data-cy="list-item-collapsible-header-content"
  >
    Header
  </div>
</li>
<div class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
     data-cy="list-item-collapsible-collapse"
     style="min-height: 0px;"
>
  <div class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper">
    <div class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner">
      Collapsible Content
    </div>
  </div>
</div>
`;
